# moonmic

./: BUILD.md  CMakeLists.txt  INTEGRATION.md  README.md  moonmic_debug.h  moonmic_internal.h
host/: README.md
host/src/: audio_receiver.h  main.cpp  version_checker.cpp
host/src/platform/windows/: resources.rc
network/: udp_sender.cpp
